Fix default parameter values for window.alert() / prompt() / confirm() https://bugs.webkit.org/show_bug.cgi?id=160085

Reviewed by Ryosuke Niwa.

Source/WebCore:

Fix default parameter values for window.alert() / prompt() / confirm() to
match the specification:
- https://html.spec.whatwg.org/multipage/browsers.html#the-window-object

They should default to the empty string, not the string "undefined".

Firefox and chrome agree with the specification.

No new tests, updated existing test.

* page/DOMWindow.h:
* page/DOMWindow.idl:

LayoutTests:

Update existing test to reflect behavior change.

* fast/dom/Window/alert-undefined-expected.txt:
* fast/dom/Window/alert-undefined.html:


Canonical link: https://commits.webkit.org/178245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203612 268f45cc-cd09-0410-ab3c-d52691b4dbfc